--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     // room
     implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.work:work-runtime:2.4.0"
     implementation "androidx.room:room-ktx:2.2.5"
     implementation 'androidx.preference:preference:1.1.1'
     kapt "androidx.room:room-compiler:2.2.5"
